# okwugbe

./: LICENSE  README.md  plan.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: naaml2021.md
fon/: README.md  characters_set.txt
fon/naaml/: README.md
src/okwugbe/: commonvoice.py  decoder.py  earlystopping.py  ffff  metrics.py  model.py  okwugbe_asr.py  process.py  test.py  texttransform.py  train_eval.py
src/okwugbe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
