[build-system]
requires = [
    "setuptools>=42",
    "wheel", "numpy", "torch", "torchaudio","datasets==1.12.1", "colorama","ipython==5.5.0", "livelossplot", "git+https://github.com/ftyers/commonvoice-utils.git"
]
install_requires = [
    "setuptools>=42",
    "wheel", "numpy", "torch", "torchaudio","datasets==1.12.1","colorama","ipython==5.5.0", "livelossplot", "git+https://github.com/ftyers/commonvoice-utils.git"
]
build-backend = "setuptools.build_meta"
