[metadata]
name = okwugbe
version = 1.0.0
author = Bonaventure F. P. Dossou - Chris C. Emezue
author_email = femipancrace.dossou@gmail.com - chris.emezue@gmail.com
description = Automatic Speech Recognition for African Languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edaiofficial/asr-africa
project_urls =
    Bug Tracker = https://github.com/edaiofficial/asr-africa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src