[metadata]
name = okwugbe
version = 0.1.4
author = Bonaventure F. P. Dossou - Chris C. Emezue
author_email = edai.official.edai@gmail.com
description = Automatic Speech Recognition Library for African Languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edaiofficial/asr-africa
project_urls =
    Bug Tracker = https://github.com/edaiofficial/asr-africa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    datasets==1.12.1
    numpy
    torch
    torchaudio
    colorama
    ipython==5.5.0
    livelossplot
    git+https://github.com/ftyers/commonvoice-utils.git
[options.packages.find]
where = src
